--- a/src/show.html
+++ b/src/show.html
@@ -1,6 +1,7 @@
 <template>
-  <ul class="nav showsection-nav">
-    <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
+  <ul class="nav navbar-nav">
+    <li repeat.for="row of router.navigation"
+     class="${row.isActive ? 'active' : ''}">
       <a href.bind="row.href">${row.title}</a>
     </li>
   </ul>
@@ -9,5 +10,6 @@
       <i class="fa fa-spinner fa-spin fa-2x"></i>
     </li>
   </ul>
+  <p><a route-href="route.bind: createEpisodeRoute">Create a New Episode</a> &raquo;</p>
   <router-view></router-view>
 </template>
