--- a/src/show.html
+++ b/src/show.html
@@ -10,6 +10,6 @@
       <i class="fa fa-spinner fa-spin fa-2x"></i>
     </li>
   </ul>
-  <p><a route-href="route.bind: createEpisodeRoute">Create a New Episode</a> &raquo;</p>
+  <p><a route-href="route.bind: 'createEpisode'">Create a New Episode</a> &raquo;</p>
   <router-view></router-view>
 </template>
