--- a/src/show/episodes.html
+++ b/src/show/episodes.html
@@ -1,2 +1,13 @@
 <template>
+  <ul class="nav navbar-nav">
+    <li repeat.for="ep in episodes" class="${row.isActive ? 'active' : ''}">
+      <a href.bind="row.href" class="${row.config.name}">${row.title}</a>
+    </li>
+  </ul>
+  <ul class="nav navbar-nav navbar-right">
+    <li class="loader" if.bind="router.isNavigating">
+      <i class="fa fa-spinner fa-spin fa-2x"></i>
+    </li>
+  </ul>
+  <router-view></router-view>
 </template>
