--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,9 @@
 <template>
   <div class="main">
-    <h1>Impulse Detroit
+    <h1>
+      <!--
+        Impulse Detroit
+      -->
       <span class="loader" if.bind="router.isNavigating || state.isRequesting">
         <i class="fa fa-spinner fa-spin fa-2x"></i>
       </span>
