--- a/src/show/episode.html
+++ b/src/show/episode.html
@@ -22,6 +22,7 @@
         placeholder="description" value.bind="ep.description">
       </textarea>
     </div>
+    <!-- <input type="hidden" value.bind="ep.show_id"> -->
     <input type="submit">
   </form>
 </template>
