--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,7 @@
           <a href.bind="row.href">${row.title}</a>
         </li>
       </ul>
+      <p class="flash">${state.flash}</p>
       <router-view></router-view>
     </div>
 
