--- a/src/show/list.html
+++ b/src/show/list.html
@@ -1,12 +1,17 @@
 <template>
+  <require from="../components/markdown"></require>
   <ul class="eplist">
     <li repeat.for="ep of state.show.episodes">
       <div class="num">${ep.number}.</div>
       <div class="title">
         <a route-href="route: episode; params.bind: {num: ep.number}">${ep.title}</a>
       </div>
-      <div class="record-date"><span>${ep.record_date}</span></div>
-      <div class="description">${ep.description}</div>
+      <div class="record-date">
+        <span>${ep.record_date}</span>
+      </div>
+      <div class="description">
+        <markdown model="${ep.description}"></markdown>
+      </div>
       <!-- <a route&#45;href="route: show; params.bind: {slug: show.slug}"> -->
       <!--   ${show.name} -->
       <!-- </a> -->
