--- a/src/show/episodes.html
+++ b/src/show/episodes.html
@@ -23,7 +23,7 @@ cat: list.html: No such file or directory
         <a route-href="route: episode; params.bind: {num: ep.number}">${ep.title}</a>
       </div>
       <div class="record-date">
-        <span>${ep.record_date}</span>
+        <span>Recorded on ${ep.record_date}</span>
       </div>
       <div class="description">
         <markdown model="${ep.description}"></markdown>
