--- a/src/show/episodes.html
+++ b/src/show/episodes.html
@@ -1,36 +1,18 @@
-<!--
-<template>
-  <ul class="nav navbar-nav">
-    <li repeat.for="ep of episodes" class="${row.isActive ? 'active' : ''}">
-      <a href.bind="row.href" class="${row.config.name}">${row.title}</a>
-    </li>
-  </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <li class="loader" if.bind="router.isNavigating">
-      <i class="fa fa-spinner fa-spin fa-2x"></i>
-    </li>
-  </ul>
-  <router-view></router-view>
-</template>
-cat: list.html: No such file or directory
--->
 <template>
   <require from="../components/markdown"></require>
+  <p><a route-href="route.bind: 'createEpisode'">Create a New Episode</a> &raquo;</p>
   <ul class="eplist">
     <li repeat.for="ep of state.show.episodes">
       <div class="num">${ep.number}.</div>
       <div class="title">
         <a route-href="route: episode; params.bind: {num: ep.number}">${ep.title}</a>
       </div>
-      <div class="record-date">
+      <div class="record">
         <span>Recorded on ${ep.record_date}</span>
       </div>
       <div class="description">
         <markdown model="${ep.description}"></markdown>
       </div>
-      <!-- <a route&#45;href="route: show; params.bind: {slug: show.slug}"> -->
-      <!--   ${show.name} -->
-      <!-- </a> -->
     </li>
   </ul>
 </template>
