--- a/src/show/episode.html
+++ b/src/show/episode.html
@@ -41,7 +41,7 @@
     </form>
   </div>
   <div class="right">
-    <markdown model="${ep.description}"></markdown>
+    <markdown model.bind="ep.description"></markdown>
   </div>
   <p class="clearer">&nbsp;</p>
 </template>
