--- a/src/show/info.html
+++ b/src/show/info.html
@@ -6,40 +6,40 @@
 
       <div class="info-section">
         <div class="left">
-          <textarea value.bind="show.tiny_info" rows="4">
+          <textarea value.bind="state.show.tiny_info" rows="4">
           </textarea>
           <ul class="error" if.bind="errors.tiny_info">
             <li repeat.for="err of errors.tiny_info">${err}</li>
           </ul>
         </div>
         <div class="right">
-          <markdown model.bind="show.tiny_info"></markdown>
+          <markdown model.bind="state.show.tiny_info"></markdown>
         </div>
       </div>
 
       <div class="info-section">
         <div class="left">
-          <textarea value.bind="show.short_info" rows="7">
+          <textarea value.bind="state.show.short_info" rows="7">
           </textarea>
           <ul class="error" if.bind="errors.short_info">
             <li repeat.for="err of errors.short_info">${err}</li>
           </ul>
         </div>
         <div class="right">
-          <markdown model.bind="show.short_info"></markdown>
+          <markdown model.bind="state.show.short_info"></markdown>
         </div>
       </div>
 
       <div class="info-section">
         <div class="left">
-          <textarea value.bind="show.full_info" rows="10">
+          <textarea value.bind="state.show.full_info" rows="10">
           </textarea>
           <ul class="error" if.bind="errors.full_info">
             <li repeat.for="err of errors.full_info">${err}</li>
           </ul>
         </div>
         <div class="right">
-          <markdown model.bind="show.full_info"></markdown>
+          <markdown model.bind="state.show.full_info"></markdown>
         </div>
       </div>
 
