--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
           <a href.bind="row.href">${row.title}</a>
         </li>
       </ul>
-      <p class="flash">${state.flash}</p>
+      <p class="flash" if.bind="state.flash">${state.flash}</p>
       <router-view></router-view>
     </div>
 
