fb live instructions

--- a/src/show/social.html
+++ b/src/show/social.html
@@ -7,6 +7,8 @@
       <p>To stream the video,
       <a href="https://www.facebook.com/impulsedetroit/publishing_tools/?section=VIDEOS">click this link</a>, click the grey "Live" button, then copy/paste the "single field" version of the stream URL into the the field below.</p>
 
+      <p>Only after you've pasted the URL and clicked the button, begin your video stream. Next, click the "Preview" button and set up the live post!</p>
+
       <p>Your post's Facebook rtmp url:</p>
 
       <div>
