added ip for stream starting

--- a/src/show/social.html
+++ b/src/show/social.html
@@ -15,6 +15,14 @@
         <input value.bind="social.fb_rtmp_url">
       </div>
 
+      <p>Your source streaming ip (prepopulated):</p>
+
+      <div>
+        <input value.bind="social.ip">
+      </div>
+
+      <p>&nbsp;</p>
+
       <div>
         <input type="submit">
       </div>
