--- a/src/show/stream.html
+++ b/src/show/stream.html
@@ -1,24 +1,26 @@
 <template>
-  <h2>${state.show.title} Social Panel</h2>
-  <div class="social-form">
+  <h2>${state.show.title} Streaming Panel</h2>
+  <div class="stream-form">
 
     <form role="form" submit.delegate="submit()">
 
-      <p>To stream the video,
+      <p>To stream the video on Facebook,
       <a href="https://www.facebook.com/impulsedetroit/publishing_tools/?section=VIDEOS">click this link</a>, click the grey "Live" button, then copy/paste the "single field" version of the stream URL into the the field below.</p>
 
       <p>Only after you've pasted the URL and clicked the button, begin your video stream. Next, click the "Preview" button and set up the live post!</p>
 
+      <p>If FB streaming is not desired, leave the field empty. You must submit this form with your ip address for streaming to work, though.</p>
+
       <p>Your post's Facebook rtmp url:</p>
 
       <div>
-        <input value.bind="social.fb_rtmp_url">
+        <input value.bind="stream.fb_rtmp_url">
       </div>
 
       <p>Your source streaming ip (prepopulated):</p>
 
       <div>
-        <input value.bind="social.ip">
+        <input value.bind="stream.ip">
       </div>
 
       <p>&nbsp;</p>
@@ -29,9 +31,9 @@
 
     </form>
 
-    <div class="social-result">
+    <div class="stream-result">
       <p if.bind="success === true" class="good">
-        If you're streaming, you should see the preview on Facebook.
+        You're good to go.
       </p>
       <p if.bind="success === false" class="bad">
         Something went wrong. Ask Adam.
