--- a/src/show/event.html
+++ b/src/show/event.html
@@ -25,7 +25,7 @@
       <div class="event-line-entry-form">
         <h3>Performances</h3>
         <ul>
-        <template repeat.for="line of ev.info.lines">
+        <template repeat.for="line of ev.lines">
           <li>
             <div>
               <input type="text" value.bind="line.time" style="width: 8em"
